src/test/ui/malformed/malformed-plugin-3.stderr
error[E0498]: malformed `plugin` attribute
  --> $DIR/malformed-plugin-3.rs:2:1
   |
LL | #![plugin(foo="bleh")]
   | ^^^^^^^^^^^^^^^^^^^^^^ malformed attribute

warning: use of deprecated attribute `plugin`: compiler plugins are deprecated. See https://github.com/rust-lang/rust/pull/64675
  --> $DIR/malformed-plugin-3.rs:2:1
   |
LL | #![plugin(foo="bleh")]
   | ^^^^^^^^^^^^^^^^^^^^^^ help: may be removed in a future compiler version
   |
   = note: `#[warn(deprecated)]` on by default

error: aborting due to previous error

